fixed spacing of syllabus

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2287,6 +2287,7 @@
 
 			.image.fit img {
 				width: 100%;
+				padding-top: 5em;
 			}
 
 		.image.main {
